--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ gap: 10rem;
     
 }
 .intro .introduction-container{
+    
     padding: 1rem;
     width: 55%;
     height:60%;
@@ -126,9 +127,16 @@ gap: 10rem;
 }
 
 .introduction-container .seftDescription{
-    width: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 45%;
+    margin-left: 4rem;
     
     
+}
+p,li{
+    font-size: larger;
 }
 .seftDescription ul li{
     font-weight: bold;
@@ -169,7 +177,7 @@ background-position: center;
     top: 50%;
     transform: translate(-50%,-50%);
    
-    width: 150px;
+    width: 250px;
     border-radius: 50%;
     
 }
@@ -204,6 +212,7 @@ background-position: center;
 
 
     .nav a{
+        font-size: x-large;
         color: white;
         text-decoration: none;
     text-shadow:black 4px 3px ;
@@ -225,6 +234,7 @@ background-position: center;
     align-items: center;
     gap: 2rem;
     
+    
 }
 
 
@@ -233,9 +243,10 @@ background-position: center;
 }
 .card-container-skills .cards-skills{
     color: black;
+    
    
     width: 100%;
-    max-width: 768px;
+    max-width: 1100px;
     
     height: auto;
     display: flex;
@@ -254,7 +265,7 @@ background-position: center;
 
     background-color: white;
     width: 15rem;
-    height: auto;
+    /* height: auto; */
     box-shadow:rgb(0, 0, 0) 15px 15px 0px;
     border:  solid 3px black;
     overflow: hidden;
@@ -310,25 +321,26 @@ animation:vibrate .5s linear both;
 
 .card-container-projects .cards-projects{
     width: 100%;
-    height: 380px;
+    height: 500px;
     display: flex;
     flex-direction: row;
     gap: 2rem;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    
    
 
    
 }
 
 .card-projects{
-    flex: 0 1 13rem;
+    flex: 0 1 20rem;
     padding: 2px;
     overflow: hidden;
     background-color: white;
     width: 30%;
-    height: 17rem;
+    height: 25rem;
     box-shadow:rgb(0, 0, 0) 15px 15px 0px;
     border:  solid 3.5px black;
     display: flex;
@@ -353,7 +365,9 @@ height: 80%;
     color: white;
     text-decoration: none;
     background-color: black;
-    padding: .5em;
+    margin-top: .3em;
+    margin-bottom: .3em;
+    padding: .7em;
     cursor: pointer;
 
 }
@@ -445,6 +459,9 @@ footer .contanct-container{
     cursor: pointer;
 }
 
+.contanct-container .box1 ul li a:hover{
+    color: yellow !important;
+}
 .contanct-container .box2 ul li a{
     /* background-color: aquamarine; */
     color: white !important;
@@ -527,14 +544,32 @@ footer .contanct-container{
   
   /* Teléfonos pequeños (≤ 480px) */
   @media screen and (max-width: 1107px) {
+
     .introduction-container{
-        width: 70% !important;
-        height: 60% !important;
+        width: 85% !important;
+        height: 75% !important;
         
+    }
+    .pixel-effect{
+        background-image: url("");
+    }
+    .seftDescription{
+        width: 65% !important;
+        margin-left: 0rem !important;
+    }
+    .seftDescription h1{
+        font-size: large;
+
+    }
+    .seftDescription p,li{
+        font-size: medium;
     }
     .box2 img{
         width: 15em;
         height: 15rem !important ;
+    }
+    .card-container-projects{
+        margin-bottom: 25rem;
     }
   }
 
@@ -548,9 +583,13 @@ footer .contanct-container{
     .introduction-container{
         width: 90% !important;
         height: 80% !important;
-        flex-direction: column-reverse !important;
+        flex-direction: row;
+       
+        
     }
+
     .seftDescription{
+        margin-top: 5rem;
         width: 100% !important;
         height: 70% ;
         display: flex;
@@ -558,12 +597,22 @@ footer .contanct-container{
         align-items: center;
         justify-content: center;
         gap: 0px;
+        margin-left: 0rem !important;
        
-      
+    }
+    .seftDescription h1{
+        font-size: x-large;
+    }
+    .seftDescription p,li{
+        font-size: medium;
+    }
+    .pixel-effect{
+        background-image: url("");
     }
     .ProfilePhoto-container{
+        
         width: 100% !important;
-        height: 30%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -577,8 +626,15 @@ footer .contanct-container{
         width: 10rem;
         height: 10rem !important;
     }
+    .card-container-projects{
+        margin-bottom: 25rem;
+    }
   }
   @media screen and (max-width: 614px) {
+
+    .pixel-effect{
+        background-image: url("");
+    }
     .intro{
 margin-top: .5rem;
         height: 95vh;
@@ -591,10 +647,16 @@ margin-top: .5rem;
         height: 100% !important;
         flex-direction: column-reverse !important;
     }
+.seftDescription{
+    margin-left: 0rem !important;
+}
 
-
-    .introduction-container .seftDescription h2{
-        font-size: medium !important;
+    .introduction-container .seftDescription h1{
+        font-size: larger !important;
+        
+    }
+    .seftDescription p{
+           font-size: medium; 
     }
     .ProfilePhoto-container{
         width: 100% !important;
@@ -606,10 +668,10 @@ margin-top: .5rem;
         
     }
     .ProfilePhoto-container img{
-        width: 7rem;
+        width: 9rem;
     }
     .card-container-projects{
-
+        margin-bottom: 12rem;
     }
     .cards-projects{
         width: 100% !important;
@@ -667,14 +729,32 @@ margin-top: .5rem;
 
   @media screen and (max-width: 391px) {
     .introduction-container{
-        width: 90% !important;
+        width: 85% !important;
         height: 100% !important;
         flex-direction: column-reverse !important;
     
     }
+    .pixel-effect{
+        background-image: url("");
+    }
+    .seftDescription{
+        margin-left: 0rem !important;
+    }
+    .seftDescription p,li{
+       
+        font-size: medium;
+    }
+    .seftDescription h1{
+        font-size: larger;
+    }
     .nav{
-        gap: 2rem !important;
+        gap: .7rem !important;
     }
 
+
+
+    .card-container-projects, .card-container-skills{
+        margin-bottom: 12rem;
+    }
   }
   
